    to missing ``import sys``.)

- webhelpers2.number

  * [bug] The format size helpers now format negative numbers correctly.
    Previously they passed the number unchanged and appended the unit
    suffix, which changed the quantity.
  * [bug] median() was not computing the median correctly for
    even-length sequences

- webhelpers2.text

  * [bug] excerpt() now works correctly when ``text`` is a ``literal``.
  * [bug] wrap_paragraphs() now works when ``width`` is a
    ``textwrap.TextWrapper`` instance.

2.0rc1 (2014-09-22)
-------------------

- webhelpers.html._literal

  * Implementation of 'literal' moved to this private module.
  * New method .lit_join() works like .join() but does not escape the parts.

- webhelpers.html.builder:

  * 'HTMLBuilder.\_\_call\_\_()' accepts keyword args 'nl' and 'lit'. If 'nl'
    is true, add a newline after each element. If 'lit' is true, don't escape
    the elements when joining them.
  * 'HTMLBuilder.literal()' is the 'literal' class constructor. As a
    consequence it no longer accepts multiple positional args.
    Use '.\_\_call\_\_()' with 'lit=True' as an alternative.
  * '.comment()' adds a space before and after the content.
  * 'HTMLBuilder.void_tags' is a set of tag names to render in the self-closing
    style because they can never have content. It replaces the 'empty_tags'
    global. Add HTML 5 tags to list: "command", "keygen", "source".
  * 'HTMLBuilder.compose_attrs' is a dict of attribute names to string
    separators. If the tag method is called with any of these attributes and
    their value is a list or tuple, join the elements into a string using this
    separator.  The separators should be literals.
  * 'HTMLBuilder.boolean_attrs' is a set of attribute names which are
    converted to HTML boolean syntax if passed to the tag method. The current
    set is a conservative few commonly used in tags: "defer", "disabled", 
    "multiple", "readonly". You can pass additional ones for a specific tag